@@ -23,6 +23,7 @@
 #include <sys/types.h>
 #include <dirent.h>
 #include <algorithm>
+#include <math.h>
 
 #include "gmenu2x.h"
 #include "linkapp.h"
@@ -313,7 +314,7 @@ void Menu::linkRight() {
 void Menu::linkUp() {
 	int l = iLink-numCols;
 	if (l<0) {
-		int rows = sectionLinks()->size()/numCols+1;
+		int rows = ceil(sectionLinks()->size()/(double)numCols);
 		l = (rows*numCols)+l;
 		if (l >= (int)sectionLinks()->size())
 			l -= numCols;
@@ -324,8 +325,9 @@ void Menu::linkUp() {
 void Menu::linkDown() {
 	uint l = iLink+numCols;
 	if (l >= sectionLinks()->size()) {
-		uint rows = sectionLinks()->size()/numCols+1;
-		if (rows > iLink/numCols+1)
+		uint rows = ceil(sectionLinks()->size()/(double)numCols);
+		uint curCol = ceil((iLink+1)/(double)numCols);
+		if (rows > curCol)
 			l = sectionLinks()->size()-1;
 		else
 			l %= numCols;
